--- a/doc_management/Dockerfile
+++ b/doc_management/Dockerfile
@@ -1,6 +1,14 @@
-FROM rust:1.59.0
-COPY .. /home/kali/Documents/SN_Docs-Management/doc_management/src/
+FROM rust:1.59.0 as builder
+
+RUN mkdir /usr/src/doc-service
+WORKDIR /usr/src/doc-service
+COPY . .
+
 RUN rustup default 1.59.0
-RUN cargo build –release 
+RUN cargo build --release
+
 EXPOSE 4100
-CMD [‘’./target/release/monapp ‘’]
+
+WORKDIR /usr/src/doc-service
+
+CMD ["./target/release/apiminio"]
