--- a/doc_management/Dockerfile
+++ b/doc_management/Dockerfile
@@ -1,4 +1,4 @@
-FROM rust:1.59.0 as builder
+FROM rust:1.59.0
 
 RUN mkdir /usr/src/doc-service
 WORKDIR /usr/src/doc-service
@@ -7,7 +7,7 @@ COPY . .
 RUN rustup default 1.59.0
 RUN cargo build --release
 
-EXPOSE 5000
+EXPOSE 5100
 
 WORKDIR /usr/src/doc-service
 
