--- a/doc_management/Cargo.toml
+++ b/doc_management/Cargo.toml
@@ -11,6 +11,7 @@ actix-web = "4.0.1"
 actix-rt = "2.7.0"
 chrono = { version = "0.4.10", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
+reqwest = "0.11.10"
 
 serde_json = "1.0"
 derive_more = "0.99.2"
